<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/action_weather_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_graphs"
        android:icon="@drawable/sharp_insert_chart_outlined_white_24"
        android:title="@string/action_graphs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/sharp_my_location_white_24"
        android:title="@string/setting_auto_detect_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/sharp_settings_white_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
