<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:chart="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.martykan.forecastie.activities.GraphActivity">

    <ScrollView
        android:id="@+id/graph_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/graph_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/graphTemperatureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/temperature"
                        android:textAlignment="center"
                        android:textColor="@color/text_dark"
                        android:textSize="18dp"/>

                    <com.db.chart.view.LineChartView
                        android:id="@+id/graph_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        chart:chart_axisBorderSpacing="8dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/graphRainTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/rain"
                        android:textAlignment="center"
                        android:textColor="@color/text_dark" android:textSize="18dp"/>

                    <com.db.chart.view.LineChartView
                        android:id="@+id/graph_rain"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        chart:chart_axisBorderSpacing="8dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/graphPressureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/pressure"
                        android:textAlignment="center"
                        android:textColor="@color/text_dark" android:textSize="18dp"/>

                    <com.db.chart.view.LineChartView
                        android:id="@+id/graph_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        chart:chart_axisBorderSpacing="8dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/graphWindSpeedTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"/>

                    <com.db.chart.view.LineChartView
                        android:id="@+id/graph_windspeed"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        chart:chart_axisBorderSpacing="8dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
